...
                if episode.progress > 0 {
                    return "Resume S\(seasonNum)E\(episodeNum)"
                } else {
                    return "Play S\(seasonNum)E\(episodeNum)"
                }
            }
            return "Play S1E1"
        }
        return displayMedia.progress > 0 ? "Resume" : "Play"
    }

    private var metadataComponents: [String] {
        var components: [String] = []
...
