appId: com.edde746.plezy.dev
---
- tapOn: "(?s)^Appearance.*"
- extendedWaitUntil:
    visible: "(?s).*Theme.*"
    timeout: 10000
- assertVisible: "(?s).*Library Density.*"
- back
- assertVisible: "(?s)^Appearance.*"
- tapOn: "(?s)^Video Playback.*"
- extendedWaitUntil:
    visible: "(?s)^Player.*"
    timeout: 10000
- repeat:
    times: 4
    while:
      notVisible: "(?s)^Subtitles & Configuration.*Subtitle Styling.*"
    commands:
      - swipe:
          start: 50%, 80%
          end: 50%, 65%
          duration: 800
      - waitForAnimationToEnd:
          timeout: 1500
- assertVisible: "(?s)^Subtitles & Configuration.*Subtitle Styling.*"
- repeat:
    times: 4
    while:
      notVisible: "(?s)^Seek & Timing.*"
    commands:
      - swipe:
          start: 50%, 80%
          end: 50%, 65%
          duration: 800
      - waitForAnimationToEnd:
          timeout: 1500
- assertVisible: "(?s)^Seek & Timing.*"
- back
- extendedWaitUntil:
    visible: "(?s)^Manage Libraries.*"
    timeout: 10000
- tapOn: "(?s)^Manage Libraries.*"
- extendedWaitUntil:
    visible: "Maestro Movies"
    timeout: 10000
- back
- extendedWaitUntil:
    visible: "(?s)^Services.*"
    timeout: 10000
- tapOn: "(?s)^Services.*"
- extendedWaitUntil:
    visible: "Services"
    timeout: 10000
- assertVisible: "(?s)^Trakt.*"
- assertVisible: "(?s)^MyAnimeList.*"
- assertVisible: "(?s)^AniList.*"
- assertVisible: "(?s)^Simkl.*"
- assertVisible: "(?s)^Seerr.*"
- back
- assertVisible: "(?s)^Services.*"
